grid system adjust

--- a/vistocar_inspect/src/pages/inspect/inspect.html
+++ b/vistocar_inspect/src/pages/inspect/inspect.html
@@ -81,6 +81,8 @@
             </ion-select>
           </ion-item>
         </ion-col>
+      </ion-row>
+      <ion-row>
         <ion-col>
           <ion-item no-padding>
             <ion-label stacked>Placa</ion-label>
